--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -92,7 +92,10 @@
                 if (data != null && data.length > 0) {
                     for (var i = 0; i < data.length; i++) {
                         $("#projectManagerCondition").append("<option value='" + data[i].userIdText + "'>" + data[i].cnName + "</option>");
-                        $("#projectManagerInput").append("<option value='" + data[i].userIdText + "'>" + data[i].cnName + "</option>")
+                        $("#projectManagerInput").append("<option value='" + data[i].userIdText + "'>" + data[i].cnName + "</option>");
+                        $("#projectMemberInput").append(" <label class=\"checkbox-inline\" style='margin-left: 0px;'>" +
+                            " <input type=\"checkbox\" name=\"projectMemberInput\" value=\"" + data[i].userIdText + "\"> "
+                            + data[i].cnName + " </label>");
                     }
                 }
             });
@@ -467,33 +470,7 @@
                     </div>
                     <div class="form-group">
                         <label for="projectMemberInput" class="col-sm-3 control-label">组成成员：</label>
-                        <div class="col-sm-9" id="projectMemberInput">
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 乐天
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 张三
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 李四
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox4" value="option3"> 王五
-                            </label>
-                            <br/>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox5" value="option1"> 赵六
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox6" value="option2"> 谢中贵
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox7" value="option3"> 洛天
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox8" value="option3"> 洛溪
-                            </label>
-                        </div>
+                        <div class="col-sm-9 text-left" id="projectMemberInput"><!--组内成员复选框--></div>
                     </div>
                 </form>
             </div>
