--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -93,8 +93,8 @@
                     for (var i = 0; i < data.length; i++) {
                         $("#projectManagerCondition").append("<option value='" + data[i].userIdText + "'>" + data[i].cnName + "</option>");
                         $("#projectManagerInput").append("<option value='" + data[i].userIdText + "'>" + data[i].cnName + "</option>");
-                        $("#projectMemberInput").append(" <label class=\"checkbox-inline\" style='margin-left: 0px;'>" +
-                            " <input type=\"checkbox\" name=\"projectMemberInput\" value=\"" + data[i].userIdText + "\"> "
+                        $("#projectMembersInput").append(" <label class=\"checkbox-inline\" style='margin-left: 0px;'>" +
+                            " <input type=\"checkbox\" name=\"projectMembersInput\" value=\"" + data[i].userIdText + "\"> "
                             + data[i].cnName + " </label>");
                     }
                 }
@@ -128,6 +128,17 @@
                         }
                     }, "json");
                 }
+            });
+
+            //新增或者编辑项目提交按钮事件
+            $("#newProjectSubmitBtn").click(function () {
+                $.post("project/insertProject", $("#newProjectForm").serialize(), function (data) {
+                    console.log(data);
+                    if (data.success) {
+                        $("#newProjectModal").modal("hide");
+                        window.location.reload();
+                    }
+                }, "json");
             });
 
             //编辑按钮事件
@@ -469,8 +480,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="projectMemberInput" class="col-sm-3 control-label">组成成员：</label>
-                        <div class="col-sm-9 text-left" id="projectMemberInput"><!--组内成员复选框--></div>
+                        <label for="projectMembersInput" class="col-sm-3 control-label">组成成员：</label>
+                        <div class="col-sm-9 text-left" id="projectMembersInput"><!--组内成员复选框--></div>
                     </div>
                 </form>
             </div>
@@ -478,7 +489,7 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">
                     关闭
                 </button>
-                <button type="button" class="btn btn-primary">
+                <button type="button" class="btn btn-primary" id="newProjectSubmitBtn">
                     提交更改
                 </button>
             </div>
