--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -251,8 +251,8 @@
                 </div>
                 <form class="form-inline" role="form">
                     <div class="form-group">
-                        <label class="control-label" for="projectName">项目名称：</label>
-                        <input type="text" class="form-control" id="projectName">
+                        <label class="control-label" for="projectNameCondition">项目名称：</label>
+                        <input type="text" class="form-control" id="projectNameCondition">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="projectManagerCondition">项目经理：</label>
