--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -61,6 +61,40 @@
                 }, "json");
             }
 
+            //项目分页函数
+            function projectPage(currentPage, pageSize) {
+                $.get("project/findProjectPage", {
+                    currentPage: currentPage, pageSize: pageSize,
+                    projectNameCondition: $("#projectNameCondition").val(),
+                    projectManagerCondition: $("#projectManagerCondition").val()
+                }, function (data) {
+                    if (data != null && data.rows != null && data.rows.length > 0) {
+                        var trElements = "";
+                        for (var i = 0; i < data.rows.length; i++) {
+                            var trElement = "<tr>";
+                            trElement += ("<td class='text-center'>" + data.rows[i].projectIdText + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].projectName + "</td>");
+                            trElement += ("<td class='text-center' >" + data.rows[i].interfaceCount + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].projectManagerText + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].memberCount + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].projectDescribe + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].createDateTime + "</td>");
+                            trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
+                            "data-target='#newUserModal' data-userid='" + data.rows[i].projectIdText + "'>编辑</button>"
+                            + "&nbsp;&nbsp;&nbsp;&nbsp;" +
+                            "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
+                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].projectIdText + "'>删除</button>" + "</td>");
+                            trElement += "</tr>";
+                            trElements = trElements + trElement;
+                        }
+                        $("#projectTableTBody").html(trElements);
+                    } else {
+                        $("#projectTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
+                    }
+                    pagerControl($("#projectManagerPanel"), data);
+                }, "json");
+            }
+
             //用户搜索
             $("#userSearchBtn").click(function () {
                 userPage(null, null);
@@ -102,6 +136,9 @@
 
             //用户分页
             userPage(null, null);
+
+            //项目分页
+            projectPage(null, null);
 
             //新增用户按钮事件
             $("#addUserBtn").click(function () {
@@ -240,7 +277,7 @@
             </div>
         </div>
         <!--项目管理-->
-        <div class="panel panel-info">
+        <div class="panel panel-info" id="projectManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">项目管理</h3>
             </div>
@@ -273,81 +310,84 @@
                     <th class="text-center">项目描述</th>
                     <th class="text-center">创建时间</th>
                     <th class="text-center">操作</th>
-                    <tr>
-                        <td class="text-center">20170628084501</td>
-                        <td class="text-center">配置中心</td>
-                        <td class="text-center">接口总数</td>
-                        <td class="text-center">乐天</td>
-                        <td class="text-center">4</td>
-                        <td class="text-center">配置项管理平台</td>
-                        <td class="text-center">2017-06-28</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-success btn-xs">编辑</button>
-                            <button type="button" class="btn btn-danger btn-xs">删除</button>
-                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
-                            <button type="button" class="btn btn-info btn-xs">接口管理</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">20170628084502</td>
-                        <td class="text-center">文档转换</td>
-                        <td class="text-center">20</td>
-                        <td class="text-center">乐天</td>
-                        <td class="text-center">4</td>
-                        <td class="text-center">office文档转换成pdf</td>
-                        <td class="text-center">2017-06-28</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-success btn-xs">编辑</button>
-                            <button type="button" class="btn btn-danger btn-xs">删除</button>
-                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
-                            <button type="button" class="btn btn-info btn-xs">接口管理</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">20170628084503</td>
-                        <td class="text-center">开关平台</td>
-                        <td class="text-center">20</td>
-                        <td class="text-center">李四</td>
-                        <td class="text-center">2</td>
-                        <td class="text-center">修改应用静态字段值</td>
-                        <td class="text-center">2017-06-28</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-success btn-xs">编辑</button>
-                            <button type="button" class="btn btn-danger btn-xs">删除</button>
-                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
-                            <button type="button" class="btn btn-info btn-xs">接口管理</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">20170628084504</td>
-                        <td class="text-center">insist-RPC平台</td>
-                        <td class="text-center">3</td>
-                        <td class="text-center">李四</td>
-                        <td class="text-center">2</td>
-                        <td class="text-center">rpc服务注册情况查看</td>
-                        <td class="text-center">2017-06-28</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-success btn-xs">编辑</button>
-                            <button type="button" class="btn btn-danger btn-xs">删除</button>
-                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
-                            <button type="button" class="btn btn-info btn-xs">接口管理</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">20170628084505</td>
-                        <td class="text-center">BOSS平台</td>
-                        <td class="text-center">23</td>
-                        <td class="text-center">王五</td>
-                        <td class="text-center">2</td>
-                        <td class="text-center">API对外调用开放平台</td>
-                        <td class="text-center">2017-06-28</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-success btn-xs">编辑</button>
-                            <button type="button" class="btn btn-danger btn-xs">删除</button>
-                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
-                            <button type="button" class="btn btn-info btn-xs">接口管理</button>
-                        </td>
-                    </tr>
+                    <tbody id="projectTableTBody">
+                    <!--用户列表-->
+                    </tbody>
+                    <!--  <tr>
+                          <td class="text-center">20170628084501</td>
+                          <td class="text-center">配置中心</td>
+                          <td class="text-center">接口总数</td>
+                          <td class="text-center">乐天</td>
+                          <td class="text-center">4</td>
+                          <td class="text-center">配置项管理平台</td>
+                          <td class="text-center">2017-06-28</td>
+                          <td class="text-center">
+                              <button type="button" class="btn btn-success btn-xs">编辑</button>
+                              <button type="button" class="btn btn-danger btn-xs">删除</button>
+                              <button type="button" class="btn btn-warning btn-xs">应用管理</button>
+                              <button type="button" class="btn btn-info btn-xs">接口管理</button>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td class="text-center">20170628084502</td>
+                          <td class="text-center">文档转换</td>
+                          <td class="text-center">20</td>
+                          <td class="text-center">乐天</td>
+                          <td class="text-center">4</td>
+                          <td class="text-center">office文档转换成pdf</td>
+                          <td class="text-center">2017-06-28</td>
+                          <td class="text-center">
+                              <button type="button" class="btn btn-success btn-xs">编辑</button>
+                              <button type="button" class="btn btn-danger btn-xs">删除</button>
+                              <button type="button" class="btn btn-warning btn-xs">应用管理</button>
+                              <button type="button" class="btn btn-info btn-xs">接口管理</button>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td class="text-center">20170628084503</td>
+                          <td class="text-center">开关平台</td>
+                          <td class="text-center">20</td>
+                          <td class="text-center">李四</td>
+                          <td class="text-center">2</td>
+                          <td class="text-center">修改应用静态字段值</td>
+                          <td class="text-center">2017-06-28</td>
+                          <td class="text-center">
+                              <button type="button" class="btn btn-success btn-xs">编辑</button>
+                              <button type="button" class="btn btn-danger btn-xs">删除</button>
+                              <button type="button" class="btn btn-warning btn-xs">应用管理</button>
+                              <button type="button" class="btn btn-info btn-xs">接口管理</button>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td class="text-center">20170628084504</td>
+                          <td class="text-center">insist-RPC平台</td>
+                          <td class="text-center">3</td>
+                          <td class="text-center">李四</td>
+                          <td class="text-center">2</td>
+                          <td class="text-center">rpc服务注册情况查看</td>
+                          <td class="text-center">2017-06-28</td>
+                          <td class="text-center">
+                              <button type="button" class="btn btn-success btn-xs">编辑</button>
+                              <button type="button" class="btn btn-danger btn-xs">删除</button>
+                              <button type="button" class="btn btn-warning btn-xs">应用管理</button>
+                              <button type="button" class="btn btn-info btn-xs">接口管理</button>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td class="text-center">20170628084505</td>
+                          <td class="text-center">BOSS平台</td>
+                          <td class="text-center">23</td>
+                          <td class="text-center">王五</td>
+                          <td class="text-center">2</td>
+                          <td class="text-center">API对外调用开放平台</td>
+                          <td class="text-center">2017-06-28</td>
+                          <td class="text-center">
+                              <button type="button" class="btn btn-success btn-xs">编辑</button>
+                              <button type="button" class="btn btn-danger btn-xs">删除</button>
+                              <button type="button" class="btn btn-warning btn-xs">应用管理</button>
+                              <button type="button" class="btn btn-info btn-xs">接口管理</button>
+                          </td>
+                      </tr>-->
                 </table>
                 <ul class="pager">
                     <li class="previous"><a href="#">&larr; 上一页</a></li>
