--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -80,10 +80,10 @@
                             trElement += ("<td class='text-center'>" + data.rows[i].projectDescribe + "</td>");
                             trElement += ("<td class='text-center'>" + data.rows[i].createDateTime + "</td>");
                             trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
-                            "data-target='#newUserModal' data-userid='" + data.rows[i].projectIdText + "'>编辑</button>"
+                            "data-target='#newProjectModal' data-userid='" + data.rows[i].projectIdText + "'>编辑</button>"
                             + "&nbsp;&nbsp;&nbsp;&nbsp;" +
                             "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
-                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].projectIdText + "'>删除</button>" + "</td>");
+                            "data-target=\"#deleteProjectModal\" data-userid='" + data.rows[i].projectIdText + "'>删除</button>" + "</td>");
                             trElement += "</tr>";
                             trElements = trElements + trElement;
                         }
@@ -481,7 +481,7 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<!-- 模态框（Modal） -->
+<!-- 删除用户模态框（Modal） -->
 <div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="deleteUserModalLabel"
      aria-hidden="true">
     <div class="modal-dialog">
@@ -496,6 +496,33 @@
             </div>
             <div class="modal-body">
                 确定删除该条用户信息吗？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<!-- 删除项目模态框（Modal） -->
+<div class="modal fade" id="deleteProjectModal" tabindex="-1" role="dialog" aria-labelledby="deleteProjectModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="deleteProjectModalLabel">
+                    删除提示
+                </h4>
+            </div>
+            <div class="modal-body">
+                确定删除该条项目信息吗？
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
