--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -272,6 +272,12 @@
                 $("#deleteProjectModal").find("button.btn-primary").attr("data-projectid", projectId);
             });
 
+            //项目机器管理按钮事件
+            $("#projectTableTBody").delegate("button.btn-warning", "click", function () {
+                var projectId = $(this).attr("data-projectid");
+                window.location.href = "projectDeploy.html?projectId=" + projectId;
+            });
+
             //删除用户提交按钮事件
             $("#deleteUserModal").delegate("button.btn-primary", "click", function () {
                 var userId = $(this).attr("data-userid");
