--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -82,7 +82,7 @@
         <!--机器管理-->
         <div class="panel panel-info" id="userManagerPanel">
             <div class="panel-heading">
-                <h3 class="panel-title">机器管理</h3>
+                <h3 class="panel-title">机器管理<div style="display:inline;float:right"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></div></h3>
             </div>
             <div class="panel-body">
                 <div class="panel panel-default">
